# cache-sim

./: .gitignore  .importlinter  CLAUDE.md  README.md  bright-soaring-beaver.md  pyproject.toml
configs/: custom_npu_global_l3a.json  custom_npu_local_l3a.json  default.json  disaggregated.json  heavy_coding.json  legacy_v1.json  lmcache.json
docs/: architecture.md  caching_models_report.md  example_report.md  experiment_a_block_size_report.md  experiment_b_sharing_l3a_report.md  experiment_c_push_pull_report.md  heavy_coding_report.md  investigation_report_round1.md  journey_and_lessons.md  phase0_test_report.md  phase1_block_allocation_report.md  phase2_block_sharing_report.md  phase2_full_analysis_report.md  phase3_reactive_eviction_report.md  phase4_disaggregated_pd_report.md  phase5_disagg_lmcache_study.md  prefix_hash_hotspot_report.md  research_questions_report.md  unified_reference.md  user_manual.md  user_manual_v2.md  vllm_comparison.md
files/: MASTER_INDEX.md  ONBOARDING.md  agentsim_design.md  agentsim_final_plan.md  cache_sim_synthesis.md  events.py  gap_analysis.md  oracle.py  profiles.py  request_sweep.py  simulator_architecture.md  simulator_architecture_v2.md
plan_and_progress/: bright-moseying-glade.md  controlled_load_plan_1.md  development_methodology.md  docs_refresh_plan_1.md  global_l3a_advantage_plan_1.md  global_l3a_advantage_progress_1.md  heavy_coding_report_plan_1.md  l3a_fix_and_smart_push_plan.md  l3a_sensitivity_triage.md  multinode_plan_2.md  multinode_progress_1.md  multinode_progress_2.md  multinode_progress_3.md  report_v2_plan.md  (+40 more)
(+123 files in other folders)
